add dev server for webpack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     //позволяет использовать esModules для пакетов, которые используют commonjs
     "esModuleInterop": true,
     //позволяет использовать дефолтный импорт вместо import * as '...'
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   },
   "ts-node": {
     "compilerOptions": {
