--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.17",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
-    "webpack": "^5.69.1",
+    "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
