--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     //в какую спеку компилировать, чтобы поддерживать большинство браузеров
     "target": "es5",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true,
     "moduleResolution": "node",
     //позволяет использовать esModules для пакетов, которые используют commonjs
