--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.6",
     "sass": "^1.69.5",
@@ -33,6 +34,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
