--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "typescript": "5.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "@svgr/webpack": "^8.1.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11"
   },
   "dependencies": {
-    "@svgr/webpack": "^8.1.0",
     "i18next": "^23.7.7",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
