--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "*": ["./src/*"]
     },
+    "strictNullChecks": true,
     //позволяет использовать esModules для пакетов, которые используют commonjs
     "esModuleInterop": true,
     //позволяет использовать дефолтный импорт вместо import * as '...'
