add i18next eslint plugin and stylelint

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix"
+    "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
+    "lint:css": "npx stylelint \"**/*.scss\"",
+    "lint:css:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.55.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-i18next": "^6.0.3",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -37,6 +40,8 @@
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.1.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "5.0",
