--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: linting, testing, building
 on: 
   push:
-    branches: [main]
-  pull_request: [main]
+    branches: 
+      - main
+  pull_request:
+    branches: 
+      - main
 jobs:
   pipeline:
     runs-on: ubuntu-latest
